--- a/vueapp1.client/package.json
+++ b/vueapp1.client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "echarts": "^5.6.0",
+    "primevue": "^4.4.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
