--- a/vueapp1.client/package.json
+++ b/vueapp1.client/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
+    "@tmcw/togeojson": "^7.1.2",
     "animate.css": "^4.1.1",
     "echarts": "^5.6.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.4.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-treeview": "^0.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
